// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateConfig Checking if empty update doesnt change anything 1`] = `
Object {
  "embeddingCategoricalMain": Object {
    "config": Object {
      "axes": Object {
        "domainWidth": 2,
        "gridOpacity": 0,
        "gridWidth": 10,
        "labelFontSize": 12,
        "offset": 10,
        "titleFontSize": 13,
        "xAxisRotateLabels": false,
        "xAxisText": "UMAP 1",
        "yAxisText": "UMAP 2",
      },
      "colour": Object {
        "gradient": "default",
        "invert": "standard",
        "masterColour": "#000000",
        "reverseColourBar": false,
        "toggleInvert": "#FFFFFF",
      },
      "dimensions": Object {
        "height": 550,
        "width": 700,
      },
      "fontStyle": Object {
        "colour": "#000000",
        "font": "sans-serif",
      },
      "label": Object {
        "enabled": true,
        "size": 28,
      },
      "legend": Object {
        "colour": "#000000",
        "enabled": true,
        "position": "top",
      },
      "marker": Object {
        "opacity": 5,
        "shape": "circle",
        "size": 5,
      },
      "selectedCellSet": "louvain",
      "selectedSample": "All",
      "spec": "1.0.0",
      "title": Object {
        "anchor": "start",
        "dx": 10,
        "fontSize": 20,
        "text": "",
      },
    },
    "experimentId": "1234",
    "outstandingChanges": true,
    "plotData": Array [],
  },
}
`;

exports[`updateConfig Checking if fields changed 1`] = `
Object {
  "volcanoPlotMain": Object {
    "config": Object {
      "axes": Object {
        "domainWidth": 2,
        "gridOpacity": 5,
        "gridWidth": 10,
        "labelFontSize": 12,
        "offset": 10,
        "titleFontSize": 13,
        "xAxisRotateLabels": false,
        "xAxisText": "log2 fold change",
        "yAxisText": "-log10(adj p-value)",
      },
      "colour": Object {
        "gradient": "default",
        "invert": "standard",
        "masterColour": "#000000",
        "reverseColourBar": false,
        "toggleInvert": "#FFFFFF",
      },
      "dimensions": Object {
        "height": 500,
        "width": 500,
      },
      "downsampleRatio": 0,
      "fontStyle": Object {
        "colour": "#000000",
        "font": "sans-serif",
      },
      "height": 2000,
      "label": Object {
        "enabled": true,
        "size": 28,
      },
      "legend": Object {
        "colour": "#000000",
        "enabled": true,
        "position": "top-right",
      },
      "logFoldChangeDomain": 0,
      "logFoldChangeThreshold": 1,
      "logFoldChangeThresholdColor": "#ff0000",
      "logFoldChangeTickCount": 5,
      "marker": Object {
        "opacity": 5,
        "shape": "circle",
        "size": 32,
      },
      "maxNegativeLogpValueDomain": 0,
      "negLogpValueThreshold": 4,
      "negativeLogpValueTickCount": 5,
      "noDifferenceColor": "#aaaaaa",
      "pvalueThresholdColor": "#ff0000",
      "showLogFoldChangeThresholdGuides": true,
      "showpvalueThresholdGuides": true,
      "significantDownregulatedColor": "#ff0000",
      "significantUpregulatedColor": "#0000ffaa",
      "spec": "1.0.0",
      "strokeCol": "#000000",
      "strokeOpa": 1,
      "textThresholdValue": 240,
      "thresholdGuideWidth": 1,
      "title": Object {
        "anchor": "start",
        "dx": 10,
        "fontSize": 15,
        "text": "",
      },
    },
    "experimentId": "1234",
    "outstandingChanges": true,
    "plotData": Array [],
  },
}
`;
